fix: add missing color definitions

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -70,6 +70,11 @@
   }
 }
 
+:root {
+  /* Shadows */
+  --shadow-inset-md: inset 0 0.125rem .5rem hsl(var(--hue) 100% 10%)
+}
+
 @font-face {
   font-family: 'Quicksand';
   src: local('Quicksand'), url('fonts/Quicksand/Quicksand-VariableFont_wght.ttf') format('truetype');
